WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173363
[Win] WebKit renders scrollbar wrong at 125% scale.
https://bugs.webkit.org/show_bug.cgi?id=173363
Summary
[Win] WebKit renders scrollbar wrong at 125% scale.
Per Arne Vollan
Reported
2017-06-14 05:16:05 PDT
The scrollbar sometimes has 2 thin horizontal lines in it at 125% scale.
Attachments
Patch
(1.54 KB, patch)
2017-06-14 05:23 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2017-06-14 05:16:32 PDT
rdar://problem/32350020
Per Arne Vollan
Comment 2
2017-06-14 05:23:56 PDT
Created
attachment 312886
[details]
Patch
Darin Adler
Comment 3
2017-06-14 07:36:44 PDT
Comment on
attachment 312886
[details]
Patch I said r=me, but frankly I’m not sure if it’s OK to clip less than what is requested.
Per Arne Vollan
Comment 4
2017-06-16 00:07:38 PDT
Comment on
attachment 312886
[details]
Patch Thanks for reviewing! I will keep an eye on the Windows bots to see if this causes any regressions.
WebKit Commit Bot
Comment 5
2017-06-16 00:36:04 PDT
Comment on
attachment 312886
[details]
Patch Clearing flags on attachment: 312886 Committed
r218384
: <
http://trac.webkit.org/changeset/218384
>
WebKit Commit Bot
Comment 6
2017-06-16 00:36:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug