[Win] WebKit renders scrollbar wrong at 125% scale. https://bugs.webkit.org/show_bug.cgi?id=173363

Reviewed by Darin Adler.

Scrollbars are drawn with the GDI function DrawThemeBackground. Sometimes, the GDI clip
rectangle will be too small since we clamp a FloatRect to integer values when setting the
GDI clip rectangle.

* platform/graphics/win/GraphicsContextWin.cpp:
(WebCore::GraphicsContextPlatformPrivate::clip):


Canonical link: https://commits.webkit.org/190335@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218384 268f45cc-cd09-0410-ab3c-d52691b4dbfc